[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tyo-mq-client"
version = "0.3.0"
description = "Python client for tyo-mq: pub/sub messaging with durable ACK/retry delivery, topic wildcards, consumer groups, and auth realms"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "TYO Lab", email = "dev@tyo.com.au" }]
requires-python = ">=3.8"
dependencies = [
    "python-socketio>=5.0",
    "websocket-client>=1.0",
]
keywords = ["tyo-mq", "pubsub", "message-queue", "socket.io", "messaging"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/tyolab/tyo-mq-client-python"
Server = "https://github.com/tyolab/tyo-mq"

[tool.setuptools]
packages = ["tyo_mq_client"]
